deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
    role: leader
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        role: leader
        tier: backend
    spec:
      containers:
        - name: leader
          image: redis:alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    role: leader
    tier: backend
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
    role: leader
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: single-worker
  template:
    metadata:
      labels:
        app: single-worker
    spec:
      hostNetwork: true
      containers:
        - name: worker
          image: AaronKFC/tsmc-project:worker
          imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeserver
  template:
    metadata:
      labels:
        app: nodeserver
    spec:
      hostNetwork: true
      containers:
        - name: nodeserver
          image: AaronKFC/tsmc-project:nodeserver
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nodeserver-service
spec:
  type: NodePort
  selector:
    app: nodeserver
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30036
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeserver-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeserver-service
                port:
                  number: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rq-dashboard
      tier: frontend
  template:
    metadata:
      labels:
        app: rq-dashboard
        tier: frontend
    spec:
      containers:
        - name: rq-dashboard
          image: docker.io/jayzhan/tsmc-project:rq-dashboard
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: rq-dashboard
    tier: frontend
spec:
  type: LoadBalancer
  ports:
    - port: 5000
  selector:
    app: rq-dashboard
    tier: frontend
